fixed labels overflow on mobile

--- a/src/app/(main)/projects/[id]/board/components/kanban-board/kanban-column/kanban-task-card/kanban-task-card.module.scss
+++ b/src/app/(main)/projects/[id]/board/components/kanban-board/kanban-column/kanban-task-card/kanban-task-card.module.scss
@@ -42,7 +42,7 @@
 	gap: 3px;
 	margin-bottom: 10px;
 	width: 100%;
-	max-height: 21px;
+	max-height: 24px;
 	overflow: hidden;
 }
 
